--- a/BoardWeb/src/main/resources/templates/board/getBoardList.html
+++ b/BoardWeb/src/main/resources/templates/board/getBoardList.html
@@ -1,13 +1,32 @@
-<html xmlns:th = "http://www.thymeleft.org">
+<html xmlns:th = "http://www.thymeleft.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 	<head>
 		<title>게시글 목록</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	</head>
 	<body th:align="center">
 		<h1>게시글 목록</h1>
-		<a th:href="@{/system/logout}">로그아웃</a>&nbsp;&nbsp;&nbsp;
-		<a th:href="@{/admin/adminPage}">게시판관리</a>
+		<span sec:authorize="isAuthenticated()">
+			<b><font color="red">
+			<span sec:authentication="principal.member.name"></span>
+			</font></b> 님 환영합니다!
+			<a th:href="@{/system/logout}">로그아웃</a>&nbsp;&nbsp;&nbsp;
+			<a th:href="@{/admin/adminPage}">게시판관리</a>
+		</span>
 		<hr>
+		<form th:action="@{/board/getBoardList}" method="post">
+			<table th:align="center" border="1" th:cellpadding="0" th:cellspacing="0" th:width="700">
+				<tr>
+					<td align="right">
+						<select name="searchCondition">
+							<option value="TITLE">제목</option>
+							<option value="CONTENT">내용</option>
+						</select>
+						<input name="searchKeyword" type="text"/>
+						<input type="submit" value="검색"/>
+					</td>
+				</tr>
+			</table>
+		</form>
 		<table th:align="center" border="1" th:cellpadding="0" th:cellspacing="0" th:width="700">
 			<tr>
 				<th bgcolor="orange" width="50">번호</th>
